add-wip-on-presentation-19-05

--- a/content/presentation/literatur.bib
+++ b/content/presentation/literatur.bib
@@ -7,4 +7,11 @@
   subtitle  = {Fundamentals, Implementation, and Operation of Streaming Applications},
 }
 
+@Book{Kreps,
+  author    = {Jay Kreps},
+  publisher = {O'Reilly Media},
+  title     = {I Heart Logs: Event Data, Stream Processing, and Data Integration},
+  year      = {2014},
+  isbn      = {9781491909331},
+}
 @Comment{jabref-meta: databaseType:bibtex;}
