add wip of the project 7.2.2023

--- a/content/presentation/literatur.bib
+++ b/content/presentation/literatur.bib
@@ -14,4 +14,12 @@
   year      = {2014},
   isbn      = {9781491909331},
 }
+
+@article{feick2018fundamentals,
+  title={Fundamentals of real-time data processing architectures lambda and kappa},
+  author={Feick, Martin and Kleer, Niko and Kohn, Marek},
+  journal={SKILL 2018-Studierendenkonferenz Informatik},
+  year={2018},
+  publisher={Gesellschaft f{\"u}r Informatik eV}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
