--- a/content/presentation/literatur.bib
+++ b/content/presentation/literatur.bib
@@ -22,4 +22,40 @@
   year={2018},
   publisher={Gesellschaft f{\"u}r Informatik eV}
 }
+
+@Book{Kleppmann,
+  author    = {Kleppmann, Martin},
+  publisher = {O'Reilly Media},
+  title     = {Designing Data-Intensive Applications: The Big Ideas Behind Reliable, Scalable, and Maintainable Systems},
+  year      = {2017},
+  isbn      = {9781449373320},
+  month     = mar,
+}
+
+@Book{Achari2015,
+  author    = {Achari, Shiva},
+  publisher = {Packt Publishing, Limited},
+  title     = {Hadoop Essentials},
+  year      = {2015},
+  isbn      = {9781784396688},
+}
+
+@Book{Akidau,
+  author    = {Akidau, Tyler and Chernyak, Slava and Lax, Reuven},
+  publisher = {O'Reilly Media},
+  title     = {Streaming Systems},
+  year      = {2018},
+  isbn      = {9781491983874},
+  subtitle  = {The What, Where, When and How of Large-Scale Data Processing},
+}
+
+@Book{Marz2015,
+  author    = {Marz, Nathan},
+  publisher = {Manning},
+  title     = {Big Data},
+  year      = {2015},
+  isbn      = {9781617290343},
+  subtitle  = {principles and best practices of scalable real-time data systems},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
